--- a/src/controls/Card.css
+++ b/src/controls/Card.css
@@ -1,8 +1,9 @@
 .wrapper {
 	position: relative;
-	height: var(--card-height);
-	width: var(--card-width);
-	perspective: calc(4 * var(--card-width));
+	height: var(--height);
+	width: var(--width);
+	perspective: calc(4 * var(--width));
+	pointer-events: none;
 }
 
 .front, .back {
@@ -11,6 +12,7 @@
 	backface-visibility: hidden;
 	position: absolute;
 	top: 0; bottom: 0; left: 0; right: 0;
+	pointer-events: all;
 }
 
 .front {
