--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ body {
 }
 
 #root {
-	height: 100%;
-	width: 100%;
+	position: fixed;
+	top: 0; left: 0; bottom: 0; right: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
