--- a/src/controls/CardWheel.css
+++ b/src/controls/CardWheel.css
@@ -15,7 +15,7 @@
 	top: calc(0.5 * var(--height));
 
 	left: calc((0.5 * var(--move-ratio) + 0.5) * var(--width));
-	transform: scale(calc(0.2 + 0.8 * var(--shrink-ratio)));
+	transform: scale(calc(0.6 + 0.4 * var(--shrink-ratio)));
 	opacity: var(--shrink-ratio);
 	z-index: 10000;
 
@@ -23,4 +23,9 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	pointer-events: none;
+}
+
+.item > * > * {
+	pointer-events: unset;
 }
