--- a/src/controls/Card.css
+++ b/src/controls/Card.css
@@ -7,20 +7,27 @@
 }
 
 .front, .back {
-	border: 2px solid gray;
 	border-radius: 3%;
 	backface-visibility: hidden;
 	position: absolute;
 	top: 0; bottom: 0; left: 0; right: 0;
 	pointer-events: all;
+
+	text-align: center;
+	font-size: calc(0.6 * var(--height));
+	line-height: var(--height);
 }
 
 .front {
+	border: 2px solid #222;
 	transform: rotateY(var(--rotate));
-	background: #A0F5E0;
+	background: #EEE;
+	color: #222;
 }
 
 .back {
+	border: 3px solid #AAA;
 	transform: rotateY(calc(180deg + var(--rotate)));
-	background: #F5A0E0;
+	background: #222;
+	color: #AAA;
 }
